Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-15837

new vbucket uuid not generated during tap takeover leading to potential data loss in xdcr replication

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Critical
    • 3.1.1, 4.0.0
    • 3.0, 3.0.1, 3.0.2, 3.0.3, 3.1.0, 4.0.0
    • couchbase-bucket
    • Security Level: Public
    • Untriaged
    • Yes
    • Mar 9 - Mar 27

    Description

      It can happen in the following scenario.

      • user starts upgrading 2.5 cluster to 3.* by rebalancing in a 3.* node n1
      • n1 becomes an owner of a vbucket (say 0); at this point vbucket uuid is generated for the vbucket (vbuuid0)
      • another rebalance is done (addition/removal, not important) and vbucket 0 moves from n1 to another node n2 (can be both 2.5 or 3.*), n1 becomes vbucket 0 replica node
      • another rebalance is done and vbucket 0 moves back to n1

      After this vbucket 0 on n1 will still have vbucket uuid vbuuid0. So xdcr might incorrectly reuse previous checkpoints and not replicate data that actually needs to be replicated.

      Attachments

        Issue Links

          For Gerrit Dashboard: MB-15837
          # Subject Branch Project Status CR V

          Activity

            People

              arunkumar Arunkumar Senthilnathan (Inactive)
              Aliaksey Artamonau Aliaksey Artamonau (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              11 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  PagerDuty