MB-15837 Generate a new vbucket UUID for TAP-based VBucket takeover.

A new vbucket UUID should be generated for each TAP-based vbucket takeover
completion. Otherwise, it can cause potential data loss after fully
switching from TAP to DCP, because TAP-based replication doesn't synchronize
sequence numbers between active and replica vbuckets.

For more details, please refer to
https://issues.couchbase.com/browse/MB-15837

Change-Id: Id8931bd110417065b244f10c71e18d0b5d47f6d2
Reviewed-on: http://review.couchbase.org/53784
Tested-by: buildbot <build@couchbase.com>
Reviewed-by: abhinav dangeti <abhinav@couchbase.com>